[tool.poetry]
name = "fastapi-claclo-lms"
version = "0.1.0"
description = ""
authors = ["Jacqueline Peters <jacquipeters88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
pydantic = "^2.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
